--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
-        "filament/filament": "^3.2",
-        "laravel/framework": "^11.31",
+        "php": "^8.4",
+        "filament/filament": "4.1.1",
+        "laravel/framework": "v12.11.1",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
